# beamsim

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  beam_ns3.hpp  beam_ns3.py  beam_ns3_install.py  beam_ns3_mock.py  beamsim-global-aggregation-analysis.ipynb  beamsim-local-aggregation-only.ipynb  beamsim.ipynb  beamsim.py  cli.hpp  example.py  example.yaml  gml2bin.cpp  layout.py  lsquic-test.cpp  main.cpp  roles.py  setup_ns3.sh  test_tcp.yaml  test_udp.yaml
.github/workflows/: build.yml
docs/: BUILD.md  MAKEFILE.md
src/: xxhash.hpp
src/beamsim/: assert.hpp  consts.hpp  from_chars.hpp  gml.hpp  i_simulator.hpp  message.hpp  mmap.hpp  network.hpp  peer_index.hpp  random.hpp  routers.hpp  set_max.hpp  simulator.hpp  std_hash.hpp  thread.hpp  time.hpp  topic_index.hpp  wire_props.hpp  write_file.hpp
src/beamsim/example/: message.hpp  roles.hpp
src/beamsim/gossip/: config.hpp  generate.hpp  message.hpp  peer.hpp  topic_index.hpp  view.hpp
src/beamsim/grid/: grid.hpp  message.hpp  topic.hpp
src/beamsim/ns3/: generate.hpp  mpi.hpp  protocol.hpp  routing.hpp  simulator.hpp
